--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 
 body {
   font-family: Roboto, sans-serif;
+  background: grey;
 }
 
 .container {
+  text-align: center;
   padding: 0 40px;
   margin-left: 80px;
 }
 
   /* Свойства ссылок */
 a {
+  text-align: center;
   display: block;
   text-decoration:none;
   margin-bottom: 1.2em;
@@ -25,7 +28,7 @@ a:hover {
 a::after {
   content: '';
   position: absolute;
-  left: 0;
+  left: 520px;
   right: 0;
   transform: translateY(1.5em);
   border-bottom: 1px solid #dadada;
@@ -33,16 +36,19 @@ a::after {
 }
 
 h1 {
+  text-align: center;
   font-size: 2em;
 }
 
 h2 {
+  text-align: center;
   font-size: 1.5em;
   margin: 1.25em 0;
 }
 
   /* Свойства фотографии*/
 .photo {
+  text-align: center;
   border-radius: 100px;
   /* Радиус скругления */
   border: 3px solid transparent;
@@ -53,5 +59,5 @@ h2 {
 
   /* Эффект наведения на картинку */
 .photo:hover {
-  border: 3px solid #37FF00;
+  border: 3px solid #0062ff;
 }
